<resources>
    <string name="app_name">Trivia</string>
    <string name="title">Trivia</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="next_button">next button</string>
    <string name="previous_button">previous_button</string>
    <string name="counter_questions">0/100</string>
    <string name="textview">Ready?</string>
</resources>
